<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Artis Bus</string>
    <string name="activity_main">Artis Bus</string>
    <string name="activity_rss">Actualité</string>
    <string name="activity_bus">Ligne régulières</string>
    <string name="activity_rural">Lignes rurales</string>
    <string name="activity_tad">Lignes TAD</string>
    <!-- MENU -->
    <string name="main_title">Artis Bus</string>
    <string name="menu_title">Rafraîchir</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_rss" tools:ignore="Typos">Info trafic</string>
    <string name="menu_website">Site Artis</string>
    <string name="menu_refresh">Rafraîchir</string>
    <string name="menu_regulieres">Lignes régulières</string>
    <string name="menu_rurales">Lignes rurales</string>
    <string name="menu_citadine">Ma citadine</string>
    <string name="menu_tad">TAD</string>
    <string name="menu_Velectric">V\'Electric</string>

    <!-- CARDVIEW MAIN -->
    <string name="cardview_1">Ligne 1</string>
    <string name="cardview_2">Ligne 2</string>
    <string name="cardview_3">Ligne 3</string>
    <string name="cardview_4">Ligne 4</string>
    <string name="cardview_5">Ligne 5</string>
    <string name="cardview_6">Ligne 6</string>
    <string name="cardview_7">Ligne 7</string>
    <string name="cardview_8">Ligne 8</string>
    <string name="cardview_9">Ligne 9</string>
    <string name="cardview_10">Ligne 10</string>
    <string name="cardview_d1">Ligne D1</string>
    <string name="cardview_d2">Ligne D2</string>
    <!-- CARDVIEW RURAL-->
    <string name="cardview_11">Ligne 11</string>
    <string name="cardview_12">Ligne 12</string>
    <string name="cardview_13">Ligne 13</string>
    <string name="cardview_14">Ligne 14</string>
    <string name="cardview_15">Ligne 15</string>
    <string name="cardview_16">Ligne 16</string>
    <string name="cardview_17">Ligne 17</string>
    <string name="cardview_18">Ligne 18</string>
    <!-- CARDVIEW TAD -->
    <string name="cardview_tad4">TAD 4</string>
    <string name="cardview_tad5">TAD 5</string>
    <string name="cardview_tad8">TAD 8</string>
    <string name="cardview_tad10">TAD 10</string>
    <string name="cardview_tadactiparc">TAD Actiparc</string>
    <string name="cardview_tadartoipole">TAD Artoipole</string>
    <string name="cardview_tadpierrebolle">TAD Pierre Bolle</string>

</resources>