<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:orderInCategory="100"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_website"
        android:orderInCategory="200"
        android:icon="@drawable/ic_website"
        android:title="@string/menu_website"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_rss"
        android:orderInCategory="300"
        android:icon="@drawable/ic_rss"
        android:title="@string/menu_rss"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_reguliere"
        android:orderInCategory="400"
        android:title="@string/menu_regulieres"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_rural"
        android:orderInCategory="500"
        android:title="@string/menu_rurales"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_citadine"
        android:orderInCategory="600"
        android:title="@string/menu_citadine"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_tad"
        android:orderInCategory="700"
        android:title="@string/menu_tad"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_velectric"
        android:orderInCategory="800"
        android:title="@string/menu_Velectric"
        app:showAsAction="ifRoom" />
</menu>