<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_home"
        android:orderInCategory="100"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_website"
        android:orderInCategory="200"
        android:icon="@drawable/ic_website"
        android:title="@string/menu_website"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_map"
        android:orderInCategory="300"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_map"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="400"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always"/>

</menu>