<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8.5"
    tools:context=".RuralActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_rural"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@android:color/white" />

    <GridLayout
        android:id="@+id/grid_rural"
        android:columnCount="3"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="true"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="0dp"
        android:layout_weight="8">

        <!-- LIGNE 11 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l11"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_11" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- LIGNE 12 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l12"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_12" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- LIGNE 13 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne13"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l13"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_13" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- LIGNE 14 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l14"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_14" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- LIGNE 15 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l15"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_15" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- LIGNE 16 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/line16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l16"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_16" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- LIGNE 17 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne17"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l17"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_17" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TEMP -->
        <androidx.cardview.widget.CardView
            android:id="@+id/rural_temp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" >
        </androidx.cardview.widget.CardView>

        <!-- LIGNE 18 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/ligne18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l18"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_18" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</androidx.appcompat.widget.LinearLayoutCompat>

