<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8.5"
    tools:context=".TADActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_tad"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@android:color/white" />

    <GridLayout
        android:id="@+id/grid_tad"
        android:columnCount="3"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="true"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="0dp"
        android:layout_weight="8">

        <!-- TAD 4 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetad4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l1"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_1" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TAD 5 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetad5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_2" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TAD 8 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetad8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l3"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_3" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TAD 10 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetad10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l4"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_4" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TAD Actiparc -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetadactiparc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l5"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_5" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TAD Artoipole -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetadartoipole"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l6"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_6" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- TAD Pierre Bolle -->
        <androidx.cardview.widget.CardView
            android:id="@+id/lignetadpierrebolle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardCornerRadius="2dp" >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:src="@drawable/l7"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cardview_7" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</androidx.appcompat.widget.LinearLayoutCompat>

